--- a/css/styles.css
+++ b/css/styles.css
@@ -322,7 +322,7 @@ color:black;
     }
     }
     .submenu1 :hover{
-    background-color: #610e0e;
+    background-color: #eeeeee;
     transition: 0.5s all;
     }
     
