--- a/css/styles.css
+++ b/css/styles.css
@@ -126,6 +126,7 @@ a:hover {
 
 /* レイアウト */
 header {
+    background-color:rgba(20,13,55,0.9);
     text-align: center;
     position: sticky;
     top: 0;
