--- a/css/styles.css
+++ b/css/styles.css
@@ -337,7 +337,7 @@ color:black;
     
     transition: color 0.3s ease;
     color:rgb(91, 209, 89);
-    animation: sidewinder2 2s ease;
+    /*animation: sidewinder2 2s ease;*/
     }
     @keyframes sidewinder2{
     0% {
