--- a/css/styles.css
+++ b/css/styles.css
@@ -752,6 +752,7 @@ color:black;
     
     #portfolio p{
     text-align: center;
+    line-height: 1.3em;
     }
     
     .mypro {
@@ -836,3 +837,4 @@ color:black;
         font-size:45px;
     }
     }
+
